--- a/package.json
+++ b/package.json
@@ -2,17 +2,18 @@
     "name": "viewport-action",
     "author": "Darlesson Oliveira",
     "license": "MIT",
-    "version": "0.1.2",
+    "version": "0.1.3",
     "description": "Provides a way with extra configuration options to execute a handler when a given element is on view.",
     "main": "src/index.js",
     "scripts": {
-        "prepare": "webpack",
-        "start:dev": "webpack-dev-server"
+        "build": "webpack --mode=production",
+        "start:dev": "webpack-dev-server --mode=development"
     },
     "devDependencies": {
         "webpack": "4.27.1",
         "webpack-cli": "3.1.2",
         "webpack-dev-server": "3.1.10",
+        "clean-webpack-plugin": "1.0.0",
         "html-webpack-plugin": "3.2.0",
         "source-map-loader": "0.2.4"
     },
