--- a/package.json
+++ b/package.json
@@ -2,14 +2,22 @@
     "name": "viewport-action",
     "author": "Darlesson Oliveira",
     "license": "MIT",
-    "version": "0.1.3",
+    "version": "0.1.4",
     "description": "Provides a way with extra configuration options to execute a handler when a given element is on view.",
-    "main": "src/index.js",
+    "main": "dist/viewportAction.min.js",
+    "module": "src/index.js",
     "scripts": {
         "build": "webpack --mode=production",
         "start:dev": "webpack-dev-server --mode=development"
     },
     "devDependencies": {
+        "babel-loader": "8.0.4",
+        "@babel/core": "7.2.2",
+        "@babel/preset-env": "7.2.3",
+        "@babel/runtime": "7.2.0",
+        "@babel/plugin-proposal-object-rest-spread": "7.2.0",
+        "@babel/plugin-transform-runtime": "7.2.0",
+        "@babel/plugin-transform-modules-umd": "7.2.0",
         "webpack": "4.27.1",
         "webpack-cli": "3.1.2",
         "webpack-dev-server": "3.1.10",
