--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "viewport-action",
     "author": "Darlesson Oliveira",
     "license": "MIT",
-    "version": "0.2.0",
+    "version": "0.2.1",
     "description": "Provides a way with extra configuration options to execute a handler when a given element is on view.",
     "main": "dist/viewportAction.min.js",
     "module": "src/index.js",
@@ -11,19 +11,19 @@
         "start:dev": "webpack-dev-server --mode=development"
     },
     "devDependencies": {
-        "babel-loader": "8.0.4",
         "@babel/core": "7.2.2",
-        "@babel/preset-env": "7.2.3",
-        "@babel/runtime": "7.2.0",
-        "@babel/plugin-proposal-object-rest-spread": "7.2.0",
+        "@babel/preset-env": "7.3.1",
+        "@babel/runtime": "7.3.1",
+        "@babel/plugin-proposal-object-rest-spread": "7.3.2",
         "@babel/plugin-transform-runtime": "7.2.0",
         "@babel/plugin-transform-modules-umd": "7.2.0",
-        "webpack": "4.27.1",
-        "webpack-cli": "3.1.2",
-        "webpack-dev-server": "3.1.10",
-        "clean-webpack-plugin": "1.0.0",
+        "webpack": "4.29.1",
+        "webpack-cli": "3.2.3",
+        "webpack-dev-server": "3.1.14",
+        "clean-webpack-plugin": "1.0.1",
         "html-webpack-plugin": "3.2.0",
-        "source-map-loader": "0.2.4"
+        "source-map-loader": "0.2.4",
+        "babel-loader": "8.0.5"
     },
     "directories": {
         "example": "examples"
@@ -35,14 +35,19 @@
     "keywords": [
         "viewport",
         "event",
+        "lazy",
         "load",
         "mobile",
         "cordova",
+        "phonegap",
         "document",
         "performance"
     ],
     "bugs": {
         "url": "https://github.com/darlesson/viewport-action/issues"
     },
-    "homepage": "https://github.com/darlesson/viewport-action#readme"
+    "homepage": "https://github.com/darlesson/viewport-action#readme",
+    "dependencies": {
+        "npm": "^6.5.0"
+    }
 }
