--- a/package.json
+++ b/package.json
@@ -2,28 +2,33 @@
     "name": "viewport-action",
     "author": "Darlesson Oliveira",
     "license": "MIT",
-    "version": "0.2.2",
+    "version": "1.0.0",
     "description": "Provides a way with extra configuration options to execute a handler when a given element is on view.",
     "main": "dist/viewportAction.min.js",
     "module": "src/index.js",
     "scripts": {
         "build": "webpack --mode=production",
-        "start:dev": "webpack-dev-server --mode=development"
+        "start": "webpack-dev-server --mode=development",
+        "lint": "eslint src/**/*.ts",
+        "prepublish": "npm run build"
     },
+    "files": [
+        "dist"
+    ],
     "devDependencies": {
-        "@babel/core": "7.2.2",
-        "@babel/preset-env": "7.3.1",
-        "@babel/runtime": "7.3.1",
-        "@babel/plugin-proposal-object-rest-spread": "7.3.2",
-        "@babel/plugin-transform-runtime": "7.2.0",
-        "@babel/plugin-transform-modules-umd": "7.2.0",
-        "webpack": "4.29.1",
-        "webpack-cli": "3.2.3",
-        "webpack-dev-server": "3.1.14",
-        "clean-webpack-plugin": "1.0.1",
-        "html-webpack-plugin": "3.2.0",
-        "source-map-loader": "0.2.4",
-        "babel-loader": "8.0.5"
+        "webpack": "4.44.2",
+        "webpack-cli": "3.3.12",
+        "webpack-dev-server": "3.11.0",
+        "clean-webpack-plugin": "3.0.0",
+        "html-webpack-plugin": "4.5.0",
+        "source-map-loader": "1.1.0",
+        "typescript": "4.0.3",
+        "ts-loader": "8.0.4",
+        "eslint": "7.10.0",
+        "@types/react": "16.9.51",
+        "@types/react-dom": "16.9.8",
+        "@typescript-eslint/parser": "4.4.0",
+        "@typescript-eslint/eslint-plugin": "4.4.0"
     },
     "directories": {
         "example": "examples"
@@ -31,6 +36,9 @@
     "repository": {
         "type": "git",
         "url": "git+https://github.com/darlesson/viewport-action.git"
+    },
+    "engines": {
+        "node": ">=12.13.0"
     },
     "keywords": [
         "viewport",
